Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2729

MGS issues warning when trying to remove nonexistent proc file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6631

      The mgs teardown code gets invoked in the failure case but assumes
      that the MGSSELF_NAME proc file has been created. If it hasn't been
      created, the proc code issues a WARN_ON.

      The setup code clears the FSDB_MGS_SELF from &fsdb->fsdb_flags when it
      creates the proc file, so we can key off of that to decide whether to
      remove it.

      -----------[ cut here ]-----------
      WARNING: at /home/jeffm/src/scratch/trees/linux-3.0-SLE11-SP2/fs/proc/generic.c:809 remove_proc_entry+0x249/0x2c0()
      Hardware name: ProLiant DL165 G7
      name '_mgs'
      Modules linked in: mdt(N) mdd(N) mds(N) fsfilt_ldiskfs(N) mgs(N) mgc(N) ldiskfs(N) jbd2 crc16 lustre(N) lov(N) osc(N) lquota(N) mdc(N) fid(N) fld(N) ksocklnd(N) ptlrpc(N) obdclass(N) lnet(N) lvfs(N) libcfs(N) autofs4 binfmt_misc edd nfs lockd fscache auth_rpcgss nfs_acl sunrpc af_packet cpufreq_conservative cpufreq_userspace cpufreq_powersave powernow_k8 mperf microcode fuse loop dm_mod sp5100_tco(N) ipv6 ipv6_lib igb i2c_piix4 rtc_cmos k10temp i2c_core sg pcspkr serio_raw amd64_edac_mod(N) edac_core button dca edac_mce_amd(N) ext3 jbd mbcache btrfs zlib_deflate crc32c libcrc32c sd_mod crc_t10dif processor thermal_sys hwmon scsi_dh_alua scsi_dh_hp_sw scsi_dh_rdac scsi_dh_emc scsi_dh ata_generic ahci libahci pata_atiixp libata scsi_mod
      Supported: Yes
      Pid: 4537, comm: mount.lustre Tainted: G N 3.0.45-desktop #41
      Call Trace:
      [<ffffffff81004755>] dump_trace+0x85/0x360
      [<ffffffff81473244>] dump_stack+0x69/0x6f
      [<ffffffff8105b3eb>] warn_slowpath_common+0x7b/0xc0
      [<ffffffff8105b4e5>] warn_slowpath_fmt+0x45/0x50
      [<ffffffff811bbb49>] remove_proc_entry+0x249/0x2c0
      [<ffffffffa0b5a7ab>] lproc_mgs_del_live+0x1b/0x30 [mgs]
      [<ffffffffa0b56420>] mgs_free_fsdb+0x20/0x740 [mgs]
      [<ffffffffa0b56b87>] mgs_cleanup_fsdb_list+0x47/0x70 [mgs]
      [<ffffffffa0b40cc9>] mgs_precleanup+0xf9/0x120 [mgs]
      [<ffffffffa0566c8e>] class_cleanup+0x1fe/0xdd0 [obdclass]
      [<ffffffffa056877b>] class_process_config+0xf1b/0x1a50 [obdclass]
      [<ffffffffa056941d>] class_manual_cleanup+0x16d/0x710 [obdclass]
      [<ffffffffa056d70f>] server_stop_mgs+0x4f/0x200 [obdclass]
      [<ffffffffa0575ae1>] server_put_super+0x771/0xc90 [obdclass]
      [<ffffffffa0579dd0>] server_fill_super+0x2a0/0x850 [obdclass]
      [<ffffffffa057a4fb>] lustre_fill_super+0x17b/0x530 [obdclass]
      [<ffffffff8115aa63>] mount_nodev+0x83/0xd0
      [<ffffffffa056ae50>] lustre_mount+0x20/0x30 [obdclass]
      [<ffffffff8115a5ce>] mount_fs+0x4e/0x1a0
      [<ffffffff81175985>] vfs_kern_mount+0x65/0xd0
      [<ffffffff81175f23>] do_kern_mount+0x53/0x110
      [<ffffffff81177fcd>] do_mount+0x21d/0x260
      [<ffffffff811780d0>] sys_mount+0xc0/0xf0
      [<ffffffff8147d912>] system_call_fastpath+0x16/0x1b
      [<00007fe065c0248a>] 0x7fe065c02489
      --[ end trace 79969c6930f1bc25 ]--

            bogl Bob Glossman (Inactive)
            jeffm Jeff Mahoney (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: